* core: add color "gray"
* core: add attributes for colors ("*": bold, "!": reverse, "_": underline)
* core: dynamically allocate color pairs (extended colors can be used without
  being added with command "/color")
* core: allow background for nick colors (using ":")
* api: add new function buffer_match_list
* aspell: fix spellers used after switch of window (bug #32811)
* irc: use nick color for users outside the channel
* irc: replace options irc.color.nick_prefix_{op|halfop|voice|user} by a single
  option irc.color.nick_prefixes (task #10888)
* irc: update short name of server buffer when server is renamed
* irc: fix local variable "away" on server buffer (set/delete it each time away
  is set or removed on server)
* irc: add new options irc.look.buffer_switch_autojoin and
  irc.look.buffer_switch_join (task #8542, task #10506)
* irc: add new option irc.look.smart_filter_nick
* irc: ignore join if nick is not self nick and if channel buffer does not exist
  (bug #32667)
* irc: fix crash when setting wrong value in option
  irc.server.xxx.sasl_mechanism (bug #32670)
* irc: add new options irc.look.color_nicks_in_nicklist and
  irc.look.color_nicks_in_names
* irc: fix crash when completing /part command on a non-irc buffer (bug #32402)
* irc: add many missing commands for target buffer (options irc.msgbuffer.xxx)
  (bug #32216)
* lua: fix crash when many scripts are executing callbacks at same time
* relay: allow colon in server password received from client
* relay: do not send join for private buffers to client
* rmodifier: fix reload of file rmodifier.conf
* rmodifier: fix crash when adding rmodifier with invalid regex
* tcl: fix tcl detection on some 64-bits systems (bug #32915)
* xfer: do not close chat buffers when removing xfer from list (bug #32271)

Version 0.3.4 (2011-01-16)
--------------------------

* core: add 256 colors support, new command /color, new section "palette" in
  weechat.conf (task #6834)